# copta

./: CMakeLists.txt  ReadMe.md
include/jast/: ast-builder.h  astfactory.h  astvisitor.h  expression.h  handle.h  list.h  parser.h  scope.h  statement.h  tokens.inc
include/jast/ir/: CMakeLists.txt  basic-block.h  code-generator.h  debug-info.h  function.h  instruction-visitor.h  instruction.h  instructions.h  interp-native-functions.h  interp.h  ir-builder.h  module.h  redundant-code-elimination.h  value.h
include/jast/semantics/: CMakeLists.txt  error.h  symbol-table.h  symtab-generator.h  type-analysis.h  type-detector.h
include/jast/types/: CMakeLists.txt  type-system.h  type.h
samples/: CMakeLists.txt  dump-ast.cc  dump-ast.h  parse.cc
src/jast/: ast-builder.cc  ast-match.cc  astfactory.cc  parser.cc  scope.cc
src/jast/ir/: CMakeLists.txt  basic-block.cc  code-generator.cc  debug-info.cc  function.cc  instruction.cc  interp-native-functions.cc  interp.cc  module.cc  value.cc
src/jast/semantics/: CMakeLists.txt  symbol-table.cc  symtab-generator.cc  type-analysis.cc  type-detector.cc
src/jast/types/: CMakeLists.txt  type-system.cc  type.cc
tests/: CMakeLists.txt  list-tests.cc
